--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Nityanand Gupta",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^6.2.1",
-    "cypress-wait-until": "^1.7.1"
+    "cypress": "^6.3.0",
+    "cypress-wait-until": "^1.7.1",
+    "typescript": "^2.2.1"
   },
   "dependencies": {
     "chai": "^4.2.0",
+    "cypress-xpath": "^1.6.1",
     "mocha": "^8.2.1",
     "npx": "^10.2.2"
   }
