--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "../node_modules",
     "types": [
       "cypress"
-    ]
+    ],
+    "extends": "@tsconfig/node14/tsconfig.json"
   },
   "include": [
     "**/*.*"
