--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^6.3.0",
+    "cypress-file-upload": "^5.0.2",
     "cypress-wait-until": "^1.7.1",
     "typescript": "^2.2.1"
   },
